// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiComment is rendered 1`] = `
<li
  aria-label="aria-label"
  class="euiComment testClass1 testClass2 css-mjs1z4-euiTimelineItem"
  data-test-subj="test subject string"
>
  <div
    class="css-1grznaw-euiTimelineItemIcon-center"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar css-1ei12rq-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <div
      class="euiCommentEvent css-a4j02z-euiCommentEvent-update"
    >
      <div
        class="css-1880yg5-euiCommentEvent__header"
      >
        <div
          class="euiPanel euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow css-1rpkzr0-euiCommentEvent__headerPanel"
        >
          <div
            class="css-1h0gm9q-euiCommentEvent__headerMain"
          >
            <div
              class="css-1l51d77-euiCommentEvent__headerData"
            >
              <div
                class="css-10865x4-euiCommentEvent__headerUsername"
              >
                someuser
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`EuiComment props avatarIcon is rendered 1`] = `
<li
  class="euiComment css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1grznaw-euiTimelineItemIcon-center"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar css-1jpsc91-euiAvatar-m-user-subdued"
        role="img"
        title="someuser"
      >
        <span
          class="euiAvatar__icon"
          data-euiicon-type="dot"
        >
          someuser
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <div
      class="euiCommentEvent css-a4j02z-euiCommentEvent-update"
    >
      <div
        class="css-1880yg5-euiCommentEvent__header"
      >
        <div
          class="euiPanel euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow css-1rpkzr0-euiCommentEvent__headerPanel"
        >
          <div
            class="css-1h0gm9q-euiCommentEvent__headerMain"
          >
            <div
              class="css-1l51d77-euiCommentEvent__headerData"
            >
              <div
                class="css-10865x4-euiCommentEvent__headerUsername"
              >
                someuser
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`EuiComment props avatarName is rendered 1`] = `
<li
  class="euiComment css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1grznaw-euiTimelineItemIcon-center"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="avatar name"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar css-1ei12rq-euiAvatar-m-user"
        role="img"
        style="background-color:#79aad9;color:#000000"
        title="avatar name"
      >
        <span
          aria-hidden="true"
        >
          an
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <div
      class="euiCommentEvent css-a4j02z-euiCommentEvent-update"
    >
      <div
        class="css-1880yg5-euiCommentEvent__header"
      >
        <div
          class="euiPanel euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow css-1rpkzr0-euiCommentEvent__headerPanel"
        >
          <div
            class="css-1h0gm9q-euiCommentEvent__headerMain"
          >
            <div
              class="css-1l51d77-euiCommentEvent__headerData"
            >
              <div
                class="css-10865x4-euiCommentEvent__headerUsername"
              >
                someuser
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`EuiComment props event is rendered 1`] = `
<li
  class="euiComment css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1grznaw-euiTimelineItemIcon-center"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar css-1ei12rq-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <div
      class="euiCommentEvent css-a4j02z-euiCommentEvent-update"
    >
      <div
        class="css-1880yg5-euiCommentEvent__header"
      >
        <div
          class="euiPanel euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow css-1rpkzr0-euiCommentEvent__headerPanel"
        >
          <div
            class="css-1h0gm9q-euiCommentEvent__headerMain"
          >
            <div
              class="css-1l51d77-euiCommentEvent__headerData"
            >
              <div
                class="css-10865x4-euiCommentEvent__headerUsername"
              >
                someuser
              </div>
              <div
                class="css-ui5tce-euiCommentEvent__headerEvent"
              >
                commented
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`EuiComment props timestamp is rendered 1`] = `
<li
  class="euiComment css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1grznaw-euiTimelineItemIcon-center"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar css-1ei12rq-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1a9m88x-euiTimelineItemEvent-center"
  >
    <div
      class="euiCommentEvent css-a4j02z-euiCommentEvent-update"
    >
      <div
        class="css-1880yg5-euiCommentEvent__header"
      >
        <div
          class="euiPanel euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow css-1rpkzr0-euiCommentEvent__headerPanel"
        >
          <div
            class="css-1h0gm9q-euiCommentEvent__headerMain"
          >
            <div
              class="css-1l51d77-euiCommentEvent__headerData"
            >
              <div
                class="css-10865x4-euiCommentEvent__headerUsername"
              >
                someuser
              </div>
              <div
                class="css-14k69ug-euiCommentEvent__headerTimestamp"
              >
                <time>
                  21 days ago
                </time>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`EuiComment renders a body 1`] = `
<li
  class="euiComment css-mjs1z4-euiTimelineItem"
>
  <div
    class="css-1t86e7q-euiTimelineItemIcon-top"
  >
    <div
      class="css-irfkcc-euiTimelineItemIcon__content"
    >
      <div
        aria-label="someuser"
        class="euiAvatar euiAvatar--m euiAvatar--user euiCommentAvatar css-1ei12rq-euiAvatar-m-user"
        role="img"
        style="background-color:#c47c6c;color:#000000"
        title="someuser"
      >
        <span
          aria-hidden="true"
        >
          s
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1waxxmm-euiTimelineItemEvent-top"
  >
    <figure
      class="euiCommentEvent css-tk5u5l-euiCommentEvent-regular"
    >
      <figcaption
        class="css-1880yg5-euiCommentEvent__header"
      >
        <div
          class="euiPanel euiPanel--borderRadiusMedium euiPanel--transparent euiPanel--noShadow css-1rpkzr0-euiCommentEvent__headerPanel"
        >
          <div
            class="css-1h0gm9q-euiCommentEvent__headerMain"
          >
            <div
              class="css-1l51d77-euiCommentEvent__headerData"
            >
              <div
                class="css-10865x4-euiCommentEvent__headerUsername"
              >
                someuser
              </div>
            </div>
          </div>
        </div>
      </figcaption>
      <div
        class="css-1gv33fs-euiCommentEvent__body"
      >
        <p>
          This is the body.
        </p>
      </div>
    </figure>
  </div>
</li>
`;
